[gd_scene load_steps=14 format=3 uid="uid://bpacm3qv37hs8"]

[ext_resource type="PackedScene" uid="uid://3itvhn02h1hy" path="res://scenes/Levels/LevelBase.tscn" id="1_5vhba"]
[ext_resource type="Script" path="res://Scripts/Levels/level_7.gd" id="2_b7hkt"]
[ext_resource type="PackedScene" uid="uid://diuxd3v1qb85f" path="res://scenes/box.tscn" id="3_ose8m"]
[ext_resource type="PackedScene" uid="uid://bqqp3t3gyi13u" path="res://scenes/new_worm.tscn" id="4_pnchg"]
[ext_resource type="Material" uid="uid://dk0job0vsm27r" path="res://assets/Dirt_Material.tres" id="5_ewoag"]
[ext_resource type="PackedScene" uid="uid://b7yhrd8oma55f" path="res://scenes/button_small.tscn" id="7_1otu6"]
[ext_resource type="PackedScene" uid="uid://bce6atjqp6kof" path="res://scenes/finish.tscn" id="7_edfve"]
[ext_resource type="Material" uid="uid://0jed1sk6jq5" path="res://assets/GrassMaterial.tres" id="8_wyt1y"]
[ext_resource type="PackedScene" uid="uid://d076us4fj6gri" path="res://scenes/pressure_pad.tscn" id="9_0y0dc"]
[ext_resource type="PackedScene" uid="uid://c2apv7vg2rtcy" path="res://scenes/lettuce.tscn" id="9_mc4ud"]
[ext_resource type="PackedScene" uid="uid://k10usb8384ng" path="res://scenes/fence.tscn" id="10_myyx2"]
[ext_resource type="PackedScene" uid="uid://br1c6x1rx1cy8" path="res://scenes/guillotine.tscn" id="10_y2q8s"]
[ext_resource type="PackedScene" uid="uid://cf7y1bn8e7jo7" path="res://scenes/spikes.tscn" id="11_ue7sr"]

[node name="LevelBase" instance=ExtResource("1_5vhba")]
script = ExtResource("2_b7hkt")

[node name="Worm" parent="." index="7" instance=ExtResource("4_pnchg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0511146, 0.463309, -12.0478)
visible = false
spawn_points = [Vector3(0, 0, 0), Vector3(0, 0, -1), Vector3(0, 0, -2), Vector3(-1, 0, -2), Vector3(-2, 0, -2), Vector3(-2, 0, -1), Vector3(-2, 0, 0), Vector3(-1, 0, 0), Vector3(-1, 0, -1)]

[node name="Floor2" type="CSGBox3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.07978, -33.5474, -8.59412)
layers = 2
use_collision = true
collision_layer = 18
collision_mask = 2
size = Vector3(10.8618, 67.095, 13.6191)
material = ExtResource("8_wyt1y")

[node name="Floor3" type="CSGBox3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.65257, -33.5474, -6.81507)
layers = 2
use_collision = true
collision_layer = 18
collision_mask = 2
size = Vector3(4.95728, 67.095, 10.061)
material = ExtResource("8_wyt1y")

[node name="Floor4" type="CSGBox3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.85218, -33.5474, -8.78455)
layers = 2
use_collision = true
collision_layer = 18
collision_mask = 2
size = Vector3(2.46466, 67.095, 14)
material = ExtResource("8_wyt1y")

[node name="Walls" type="Node3D" parent="." index="11"]

[node name="walls2" type="CSGBox3D" parent="Walls" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.10866, -24.2739, -8.59186)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(1, 49.5507, 13.7759)

[node name="walls3" type="CSGBox3D" parent="Walls" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.19261, -24.2739, -8.78203)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(0.836426, 49.5507, 14.1563)

[node name="walls13" type="CSGBox3D" parent="Walls" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.386324, 0.251725, -15.0105)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(5.5835, 0.5, 0.9)

[node name="walls29" type="CSGBox3D" parent="Walls" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.91293, 0.251725, -7.01046)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(2.81543, 0.5, 0.9)

[node name="walls32" type="CSGBox3D" parent="Walls" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.55374, 0.251725, -6.01046)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(3.88208, 0.5, 0.9)

[node name="walls30" type="CSGBox3D" parent="Walls" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.59458, 0.251725, -7.01046)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(3.82129, 0.5, 0.9)

[node name="walls24" type="CSGBox3D" parent="Walls" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.32785, 0.251725, -15.0115)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(5.2439, 0.5, 0.909729)

[node name="walls23" type="CSGBox3D" parent="Walls" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.00522, 0.251725, -14.0105)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(3, 0.5, 0.9)

[node name="walls14" type="CSGBox3D" parent="Walls" index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.30044, 0.251725, -11.0105)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(4, 0.499512, 1)

[node name="walls35" type="CSGBox3D" parent="Walls" index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.52082, 0.251725, -7.87301)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(1.64388, 0.499512, 7.2749)

[node name="walls36" type="CSGBox3D" parent="Walls" index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.84276, 0.251725, -12.0394)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(1, 0.499512, 7.60767)

[node name="walls15" type="CSGBox3D" parent="Walls" index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.40683, 0.251725, -11.0105)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(3.80322, 0.499512, 1)

[node name="walls26" type="CSGBox3D" parent="Walls" index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.88122, 0.251725, -4.39462)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(0.583374, 0.499512, 1.45483)

[node name="walls37" type="CSGBox3D" parent="Walls" index="13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.85328, 0.251725, -3.13072)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(0.583374, 0.499512, 1.95575)

[node name="walls27" type="CSGBox3D" parent="Walls" index="14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02731, 0.251725, -4.02389)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(0.851318, 0.499512, 0.713379)

[node name="walls33" type="CSGBox3D" parent="Walls" index="15"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.972685, 0.251725, -4.0035)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(0.851318, 0.499512, 0.672607)

[node name="walls34" type="CSGBox3D" parent="Walls" index="16"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.96304, 0.251725, -4.0035)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(6.83203, 0.499512, 0.672607)

[node name="walls16" type="CSGBox3D" parent="Walls" index="17"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.04497, 0.251725, -15.3905)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(2.38135, 0.5, 0.9)

[node name="walls20" type="CSGBox3D" parent="Walls" index="18"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.49478, -61.4985, -2.02198)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(18, 124, 0.621094)

[node name="walls18" type="CSGBox3D" parent="Walls" index="19"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99478, -9.28563, -10.9175)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(0.9, 19.5747, 9)

[node name="walls28" type="CSGBox3D" parent="Walls" index="20"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.95522, 0.251725, -6.53554)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(0.9, 0.5, 1.856)

[node name="walls25" type="CSGBox3D" parent="Walls" index="21"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.45976, 0.251725, -13.9175)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(1.82996, 0.5, 3)

[node name="walls21" type="CSGBox3D" parent="Walls" index="22"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.96576, 0.251725, -12.5282)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(0.9, 0.5, 5.85211)

[node name="walls22" type="CSGBox3D" parent="Walls" index="23"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5175, 0.251725, -10.9218)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(1.91431, 0.5, 7.19141)

[node name="walls31" type="CSGBox3D" parent="Walls" index="24"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.97465, 0.251725, -12.1259)
material_override = ExtResource("5_ewoag")
use_collision = true
size = Vector3(3, 0.5, 5.2168)

[node name="Box" parent="." index="12" instance=ExtResource("3_ose8m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.96617, 0.464093, -13)
visible = false

[node name="Box2" parent="." index="13" instance=ExtResource("3_ose8m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.96617, 0.464093, -13)

[node name="PressurePad" parent="." index="14" instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -4.98423, -0.000160217, -13.018)

[node name="Lettuce" parent="." index="15" instance=ExtResource("9_mc4ud")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -5.04804, -3.8147e-05, -14.0967)

[node name="tenplettuce" parent="." index="16" instance=ExtResource("9_mc4ud")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -3.04804, -3.8147e-05, -8.09674)

[node name="Guillotine" parent="." index="17" instance=ExtResource("10_y2q8s")]
transform = Transform3D(-9.39795e-09, 0, -0.215, 0, 0.215, 0, 0.215, 0, -9.39795e-09, -3.935, 0, -4.476)
one_way = true

[node name="PressurePad3" parent="." index="18" instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 4.00711, -3.8147e-05, -2.97651)

[node name="ButtonSmall" parent="." index="19" instance=ExtResource("7_1otu6")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -4, 0, -2.97699)

[node name="PressurePad5" parent="." index="20" groups=["fence3_pps"] instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 4.06039, -3.8147e-05, -6.97896)

[node name="PressurePad7" parent="." index="21" groups=["fence3_pps"] instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 4.06039, -3.8147e-05, -8.97896)

[node name="PressurePad8" parent="." index="22" groups=["fence3_pps"] instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 3.06039, -3.8147e-05, -8.97896)

[node name="PressurePad9" parent="." index="23" groups=["fence3_pps"] instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 3.06039, -3.8147e-05, -7.97896)

[node name="PressurePad10" parent="." index="24" groups=["fence3_pps"] instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 5.06039, -3.8147e-05, -7.97896)

[node name="PressurePad11" parent="." index="25" groups=["fence3_pps"] instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 5.06039, -3.8147e-05, -8.97896)

[node name="PressurePad12" parent="." index="26" groups=["fence3_pps"] instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 5.06039, -3.8147e-05, -6.97896)

[node name="PressurePad13" parent="." index="27" groups=["fence3_pps"] instance=ExtResource("9_0y0dc")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 3.06039, -3.8147e-05, -6.97896)

[node name="Spikes2" parent="." index="28" instance=ExtResource("11_ue7sr")]
transform = Transform3D(-0.5, 0, 4.37114e-08, 0, 0.5, 0, -4.37114e-08, 0, -0.5, 2.9484, 0.273171, -10.0101)

[node name="Spikes3" parent="." index="29" instance=ExtResource("11_ue7sr")]
transform = Transform3D(0.5, 0, -8.74228e-08, 0, 0.5, 0, 8.74228e-08, 0, 0.5, 3.02182, 0.273171, -5.96027)

[node name="Spikes5" parent="." index="30" instance=ExtResource("11_ue7sr")]
transform = Transform3D(0.5, 0, -8.74228e-08, 0, 0.5, 0, 8.74228e-08, 0, 0.5, 5.109, 0.273171, -5.95801)

[node name="Spikes4" parent="." index="31" instance=ExtResource("11_ue7sr")]
transform = Transform3D(-0.5, 0, 4.37114e-08, 0, 0.5, 0, -4.37114e-08, 0, -0.5, 5.13473, 0.273171, -10.0101)

[node name="Finish" parent="." index="32" instance=ExtResource("7_edfve")]
transform = Transform3D(0.999981, 0, 0.00612606, 0, 1, 0, -0.00612606, 0, 0.999981, 8.0851, 0.833911, -13.0494)
collision_layer = 8

[node name="Fence3" parent="." index="33" instance=ExtResource("10_myyx2")]
transform = Transform3D(-0.5, 0, 4.37114e-08, 0, 0.5, 0, -4.37114e-08, 0, -0.5, 7.99816, 0.441381, -11.3066)

[node name="Fence4" parent="." index="34" instance=ExtResource("10_myyx2")]
transform = Transform3D(-0.5, 0, 4.37114e-08, 0, 0.5, 0, -4.37114e-08, 0, -0.5, -4.04067, 0.491168, -7.30664)

[node name="Fence5" parent="." index="35" instance=ExtResource("10_myyx2")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0.832135, 0.440163, -4.9681)

[node name="Fence6" parent="." index="36" instance=ExtResource("10_myyx2")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 6.83214, 0.440163, -2.9681)
open = true

[node name="ButtonSmall2" parent="." index="37" instance=ExtResource("7_1otu6")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 2.03369, 9.91821e-05, -4.97363)
